# cryptex

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TRADING_SYSTEM_GUIDE.md
.github/workflows/: dotnet-ci.yml  python-ci.yml
db/migrations/: 001_create_tenants.sql  002_create_orders.sql  003_create_positions.sql  004_create_candles.sql  005_enable_rls.sql  006_create_audit_log.sql  007_create_executions.sql
engine/: .editorconfig  Directory.Build.props  Directory.Packages.props  TradingPlatform.sln
engine/src/EMS/TradingPlatform.EMS.Api/: Dockerfile  Program.cs  TradingPlatform.EMS.Api.csproj  TradingPlatform.EMS.Api.http  appsettings.json
engine/src/EMS/TradingPlatform.EMS.Application/: TradingPlatform.EMS.Application.csproj
engine/src/TradingPlatform.Shared/: TradingPlatform.Shared.csproj
engine/tests/TradingPlatform.EMS.UnitTests/: TradingPlatform.EMS.UnitTests.csproj  UnitTest1.cs
engine/tests/TradingPlatform.IntegrationTests/: OmsOrderFlowTests.cs  TradingPlatform.IntegrationTests.csproj
engine/tests/TradingPlatform.OMS.UnitTests/: TradingPlatform.OMS.UnitTests.csproj  UnitTest1.cs
infra/: docker-compose.override.yml  docker-compose.yml
infra/kafka/: create-topics.sh
observability/grafana/dashboards/: trading-overview.json
observability/prometheus/: prometheus.yml
pipeline/: conftest.py  pyproject.toml  requirements-dev.txt
pipeline/candle_aggregator/: Dockerfile  requirements.txt
pipeline/candle_aggregator/src/: aggregator.py  models.py
pipeline/candle_aggregator/tests/: test_aggregator.py
pipeline/exchange_connector/: Dockerfile  requirements.txt
pipeline/exchange_connector/src/: connector.py  normalizer.py  producer.py
pipeline/exchange_connector/tests/: test_normalizer.py
pipeline/shared/: db_client.py  exceptions.py  kafka_client.py  logger.py  metrics.py  models.py
pipeline/shared/tests/: test_logger.py  test_models.py
pipeline/signal_pipeline/: Dockerfile  requirements.txt
pipeline/signal_pipeline/src/: base.py  features.py  labeler.py  llm_source.py  model.py  runner.py
pipeline/signal_pipeline/tests/: conftest.py  test_features.py  test_labeler.py  test_llm_source.py  test_model.py  test_runner.py
pipeline/signal_router/: Dockerfile
pipeline/signal_router/src/: router.py  tenant_config.py
pipeline/signal_router/tests/: test_router.py
scripts/: seed-tenants.sql  start-dev.sh  verify-kafka-flow.sh
(+62 files in other folders)
